Minor fixes to correct errors that were being displayed.